@@ -1,10 +1,8 @@
-; @(#)$Ident: dist.ini 2013-12-12 22:21 pjf ;
-
-name              = Data-CloudWeights
+name = Data-CloudWeights
 
 [Prereqs]
 perl              = 5.01
-namespace::sweep  = 0.006
+namespace::autoclean = 0.19
 Moo               = 1.003000
 Type::Tiny        = 0.012
 
