@@ -1,5 +1,7 @@
 Revision history for Data::CloudWeights
 
+          - Replaced ns::sweep with autoclean
+          - Removed Ident lines
           - Toolchain updates
 
 0.12.1    2013-09-03 15:05:13
